# affiliate-agent-performance-analyst

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  agent.py  nanoplasticity.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  nano-agent.yml
examples/: quickstart.py
marketplace/: README.md  listing.yaml
src/affiliate_agent_performance_analyst/: __init__.py  __main__.py  _constants.py  agent.py  entry.py  tools.py
tests/: test_tools.py
