[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "affiliate-agent-performance-analyst"
version = "0.1.0"
description = "AI agent for analyzing affiliate marketing performance data, calculating ROI, and generating optimization reports."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "openai==1.30.1",
    "pydantic==2.7.1",
    "aiofiles==23.2.1",
    "typer==0.12.3",
    "structlog==24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
]

[project.scripts]
performance-analyst = "affiliate_agent_performance_analyst.entry:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/affiliate_agent_performance_analyst"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
