[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "affiliate-agent-performance-analyst"
version = "0.1.0"
description = "AI agent for analyzing affiliate marketing performance data, calculating ROI, and generating optimization reports."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30.0,<2.0",
    "pydantic>=2.7.0,<3.0",
    "typer>=0.12.0,<1.0",
    "structlog>=24.1.0,<26.0",
    "python-dotenv>=1.0.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
performance-analyst = "affiliate_agent_performance_analyst.entry:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/affiliate_agent_performance_analyst"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
